Update terminology from disposable/temporary to anonymous

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShieldMail - Secure Temporary Email Service</title>
-    <meta name="description" content="Protect your privacy with ShieldMail - Create disposable email addresses that shield your real inbox from spam and unwanted messages.">
+    <title>ShieldMail - Anonymous Email Addresses That Protect Your Privacy</title>
+    <meta name="description" content="Create real anonymous email addresses that shield your identity. Forward emails to your real inbox while keeping your personal email private and secure.">
   </head>
   <body>
     <div id="root"></div>
